--- a/module-3/02_CSS_Selectors/student-exercise/style.css
+++ b/module-3/02_CSS_Selectors/student-exercise/style.css
@@ -15,3 +15,90 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+aside {
+  position:fixed;
+  width: 200px;
+  height: 100vh;
+  border-right: 1px solid;
+  border-right-color: rgba(0, 173, 238, 0.4);
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+aside > img {
+  height: 120px;
+  margin: 0 auto;
+  display: block;
+
+}
+
+main{
+  margin-left: 200px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+li {
+  list-style: none;
+  text-align: center;
+  text-transform: uppercase;
+  border-bottom: 1px solid;
+  border-bottom-color: rgba(0, 173, 238, 0.4);
+  margin: 10px auto;
+  padding-bottom: 10px;
+  width: 80%;
+  line-height: 2;
+}
+
+a {
+  font-weight: bold;
+  color: #00ADEE;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: #00ADEE
+}
+
+header {
+  height: 120px;
+
+
+}
+
+header > img {
+  height: 80%;
+}
+
+.banner {
+  display: block;
+  width: 100%;
+}
+
+section > div {
+  display: inline-block;
+  width: 33%;
+  padding-right: 20px;
+  margin-top: 20px;
+}
+
+div > h2 {
+  color: #8CC36F;
+}
+
+h2 > i {
+  margin-right: 10px;
+}
+
+#what-we-do,
+#our-work {
+  border-right: 1px solid;
+  border-right-color: rgba(170, 239, 135, 0.8);
+}
+
+#our-work,
+#contact-us {
+  padding-left: 20px;
+}
