--- a/module-3/10-Week2-Review/group-project/css/styles.css
+++ b/module-3/10-Week2-Review/group-project/css/styles.css
@@ -46,6 +46,6 @@ button {
   border-radius: 4px;
   font-size: 20px;
 }
-.hidden {
+.hidden { /* adding 'hidden' to the class of an element will hide it */
   display:none;
 }
